--- a/views/room.ejs
+++ b/views/room.ejs
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -6,33 +7,25 @@
   <script>
     const ROOM_ID = "<%= roomId %>"
   </script>
-  <script defer src="https://unpkg.com/peerjs@1/dist/peerjs.min.js"></script>
+  <script defer src="https://unpkg.com/peerjs@1.2.0/dist/peerjs.min.js"></script>
   <script src="/socket.io/socket.io.js" defer></script>
   <script src="script.js" defer></script>
   <title>Document</title>
   <style>
     #video-grid {
       display: grid;
-    grid-template-columns: repeat(auto-fill, 617px);
-    grid-auto-rows: 421px;
+      grid-template-columns: repeat(auto-fill, 300px);
+      grid-auto-rows: 300px;
     }
     
-    #v1{
-      width: 80%;
-    height: 58%;
-    margin-left: -15%;
-    }
-    #v2{
+    video {
       width: 100%;
-      height: 116%;
+      height: 100%;
+      object-fit: cover;
     }
   </style>
 </head>
 <body>
-  <div id="video-grid">
-    <video id="v1"></video>
-    <video id="v2"></video>
-
-  </div>
+  <div id="video-grid"></div>
 </body>
 </html>
